--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg"
+    "import matplotlib.image as mpimg\n",
+    "import cv2 as cv2"
    ]
   },
   {
@@ -82,19 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "6f2d13ed",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "(540, 960, 3)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,6 +134,8 @@
     "result = np.absolute(minus)\n",
     "\n",
     "imgplot = plt.imshow(result)\n",
+    "\n",
+    "cv2.imshow('image',img)\n",
     "\n",
     "img.shape"
    ]
